--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -24,6 +24,9 @@
 #main.main_reader article
   padding: 40px 70px 45px
 
+  .wrap
+    margin-top: 34px
+
 #main header + article,
 #reader_header + article,
 #main .header_tabs + article,
