Cleaned up funky styles caused by sheet merge Reworked the queries for bible.com home page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -41,6 +41,7 @@
   @import mobile/resource_lists
   @import mobile/users
   @import mobile/videos
+  @import mobile/subscriptions
   @import mobile/plans
   @import mobile/social
   @import mobile/notifications
