--- a/app/assets/stylesheets/mobile/_donate.sass
+++ b/app/assets/stylesheets/mobile/_donate.sass
@@ -47,6 +47,7 @@
     #field_amount
       padding-left: 24px
       margin-left: -12px
+      width: auto
 
     #field_currency_sign
       position: relative
