--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -376,7 +376,7 @@ button.action_button_grey,
     weight: bold
   line-height: 1.3
   text-align: center
-  padding: 7px 20px
+  padding: 7px 0
   +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
   background-image: none
   border: none
@@ -405,7 +405,7 @@ input[type="submit"]
   color: #fff
   text-shadow: rgba(0,0,0,0.3) 0 -1px 0
   font-size: 15px
-  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0 !important)
+  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0)
   border: none
 
 input[type="submit"]:hover
@@ -413,7 +413,7 @@ input[type="submit"]:hover
   +background-image(none)
   color: #fff
   text-shadow: rgba(0,0,0,0.3) 0 -1px 0
-  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0 !important)
+  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0)
   border: none
 
 
