--- a/app/assets/stylesheets/mobile/_global_html.sass
+++ b/app/assets/stylesheets/mobile/_global_html.sass
@@ -9,9 +9,8 @@ html
   overflow-y: scroll
 
 body
-  background: #FFF
+  background: #dedddb
   color: $body_text
-  min-width: 980px
 
 a
   color: $blue
