--- a/app/assets/stylesheets/mobile/_resource_lists.sass
+++ b/app/assets/stylesheets/mobile/_resource_lists.sass
@@ -15,7 +15,7 @@
     overflow: auto
     background: none
     border-top: 1px solid #ddd
-    padding: 30px 0
+    padding: 15px 0 5px
 
     p
       margin: 0
