--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -3,8 +3,6 @@
 // !we need a container that can contain moment cards that aren't tied to article.social-feed
 // !as user profile already defines an article where we can't easily get to it.
 
-#main .social-feed-wrap.related
-  padding-top: 78px
 
 #main article.social-requests,
 #main article.social-feed,
@@ -14,7 +12,6 @@
   border: 0
   padding: 0
   box-shadow: none
-  padding-left: 5px
   position: relative
   overflow: hidden
 
@@ -530,7 +527,6 @@ body.transition .moment
   max-height: 125px
   overflow: hidden
   position: relative
-  width: 90%
 
   .content-action
     position: absolute
@@ -789,6 +785,8 @@ body.transition .moment
   max-height: 150px
   overflow: hidden
 
+.moment-bm-labels
+  margin: 10px 0 0
 
 // !Highlight moment
 
@@ -1139,35 +1137,21 @@ body.transition .moment
   padding: 10px 10px 0
   +border-radius(0px)
   background-color: #ccc
-  margin-bottom: 10px
-  position: fixed
-  width: 100%
-  height: 78px
-  z-index: 1
   text-align: center
-  -moz-box-sizing: border-box
-  -webkit-box-sizing: border-box
-  box-sizing: border-box
+  +box-sizing(border-box)
 
   .return-to-reader
-    position: static
-    right: auto
-    top: auto
-    width: 100%
-    padding: 10px 0 !important
+    padding: 10px 0
 
   ul
     display: inline
     //@extend .clearfix
 
   li
-    float: left
-    display: inline
-    line-height: 33px
-    margin-right: 20px
+    text-align: left
+    padding: 15px 0 10px
 
     a.active
       text-decoration: underline
       cursor: default
       color: #0084c8 !important
-
