adjust mobile ui for refactored verse action bar

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -350,6 +350,9 @@
   position: relative
   background-color: #323232
   margin-top: 34px
+  position: fixed
+  top: 82px
+  z-index: 1
 
   .verse-actions-success-message
     background:
