--- a/app/assets/stylesheets/_footer.sass
+++ b/app/assets/stylesheets/_footer.sass
@@ -42,7 +42,8 @@
 html.mobile-client
 
   #footer
-    height: 120px
+    min-height: 120px
+    margin-top: 19px
 
     #languages
       float: none
