--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -117,6 +117,7 @@ div.close_tab
   background: url("mobile/verse_toolbar_bg.gif") repeat-x
   z-index: 193
   margin-top: 47px
+  display: none
 
 .share_toolbar
   height: 46px
