--- a/app/assets/stylesheets/mobile/_retina.scss
+++ b/app/assets/stylesheets/mobile/_retina.scss
@@ -65,30 +65,34 @@ only screen and (                min-resolution: 2dppx) {
 
   // !verse action menu
 
-  .verse_toolbar nav a.submenu_btn {
+  #menu_verse_actions .tab-trigger {
     background: #0084c8 image-url("mobile/verse_action_sprite_2x.png") no-repeat;
-    background-size: 16px 300px;
+    background-size: 16px 300px; 
   }
 
-  .verse_toolbar nav a.bookmark_btn {
+  #menu_verse_actions .tab-trigger.bookmark {
     background-position: center -50px;
   }
 
-  .verse_toolbar nav a.highlight_btn {
-    background-position: center -6px;
+  #menu_verse_actions .tab-trigger.comments {
+    background-position: -45px -40px;
   }
 
-  .verse_toolbar nav a.note_btn {
+  #menu_verse_actions .tab-trigger.highlight {
+    background-position: center -6px;
+  }  
+
+  #menu_verse_actions .tab-trigger.note {
     background-position: center -94px;
   }  
 
-  .verse_toolbar nav a.share_btn {
-    background-position: center -138px;
-  }
-
-  .verse_toolbar nav a.related_btn {
+  #menu_verse_actions .tab-trigger.related {
     background-position: center -227px;
-  }
+  }  
+
+  #menu_verse_actions .tab-trigger.share {
+    background-position: center -138px;
+  }  
 
   // !Header
 
