--- a/app/assets/stylesheets/mobile/_ui_elements.sass
+++ b/app/assets/stylesheets/mobile/_ui_elements.sass
@@ -43,3 +43,29 @@
 
 #main article .tab_navigation + table
   margin-top: 20px !important
+
+.color_picker
+  display: none
+  height: 33px
+  width: 33px
+  margin: 0 10px 10px 0
+  background-size: cover !important
+
+.color
+  height: 33px
+  width: 33px
+  margin: 0 10px 10px 0
+
+  span
+    width: 33px
+    margin-top: 5px
+
+.color_picker_clear
+  height: 33px
+  width: 33px
+
+.color .selected, .color_picker_clear .selected
+  width: 33px
+  height: 30px
+
+
