display publisher audio metadata consistently

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -640,16 +640,22 @@ article .reader-nav,
       color: #2C2B2B
     border: 0px !important
     text-shadow: none
-    padding: 10px 0px 30px
+    padding: 10px 0px 10px
 
     dt
       background: none
       border-top: 0px !important
       box-shadow: none
 
+      a.action_button_blue
+        width: 95%
+        margin-bottom: 0
+
     dd
       box-shadow: none
       border: 0px
+
+
 
   a.close
     display: none
