--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -445,3 +445,10 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
   font-weight: bold
   font-size: 1.5em
   line-height: 1.5em
+
+// Audio player
+//---------------------------------------------------------------------------------------
+#menu_audio_player
+  dt .copy
+    margin-bottom: 10px
+    line-height: 18px
