fix moment activity timeline

--- a/app/views/moments/_activity_sidebar.html.haml
+++ b/app/views/moments/_activity_sidebar.html.haml
@@ -11,7 +11,7 @@
         - activity.each do |user_activity|
           - user = user_activity.user
           - avatars = user.avatars
-          - avatar = avatars.sm_avatar 
+          - avatar = avatars.sm_avatar
           %li.user
             %span.timeline-avatar
               = link_to(user_path(user)) do
@@ -19,17 +19,17 @@
             = link_to(user.name, user_path(user.username), class: "user")
             - like = user_activity.recent_like
             - comm = user_activity.recent_comment
-            
+
             - if like or comm
               %ol.moment-activity-actions
                 - if like
                   %li.action-like
-                    t("moments.action.liked")
+                    = t("moments.action.liked")
                     =  api_dt_time_ago(like.created_dt)
                 - if comm
                   %li.action-comment
-                    t("moments.action.last comment")
+                    = t("moments.action.last comment")
                     =  api_dt_time_ago(comm.created_dt)
     - else
-      %p 
+      %p
       = t("social.widget.no activity yet")
