Added a submit button for comments on detail page
YV-872 #comment This was the quick way to get it working. The ajax way
was taking much too long for a tomorrow morning launch.

--- a/app/views/moments/_comments.html.haml
+++ b/app/views/moments/_comments.html.haml
@@ -39,4 +39,4 @@
               %a.moment-comment-delete{href:"#", "data-comment-id" => comment.id, title: "Delete this comment"}
                 Delete this comment
 
-    = render partial: "moments/comments_form", locals: {moment: moment}
+    = render partial: "moments/comments_form", locals: {moment: moment, detail_view: detail_view}
