--- a/app/views/moments/_comments_form.html.haml
+++ b/app/views/moments/_comments_form.html.haml
@@ -12,3 +12,6 @@
     - # Do not remove the comment-field class as this is specific to javascript
     - # functionality.  See main.js and comments_form.js class.
     = text_area_tag "comment[content]", nil, class: "moment-comments-textarea comment-field", "data-moment-id" => moment.id
+
+    - if detail_view
+      %input{:type=>"submit", :style=>"margin-top:8px;float:right"}
