--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -97,6 +97,11 @@
   width: 536px
   float: right
   border-left: 2px solid #dedddb
+  a
+    font-weight: inherit
+    &:hover
+      .user_name
+        color: #B6B6B6
 
 #header nav.sign_in
   float: left
