Fixed funky images on retina landing page. YV-902

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -637,22 +637,25 @@ p
         background: image-url("take_bible_icon@2x.png") no-repeat center 0px
         background-size: 188px 218px
 
-      li.read_bible div
-        background: #FFF image-url("read_bible_icon_m@2x.png") no-repeat 93% 20px
-        background-size: 80px
-
-      li.study_bible div
-        background: #FFF image-url("highlight_bible_icon_m@2x.png") no-repeat 93% 20px
-        background-size: 80px
-
-      li.subscribe_bible div
-        background: #FFF image-url("subscribe_bible_icon_m@2x.png") no-repeat 93% 20px
-        background-size: 80px
-
-      li.take_bible div
-        background: #FFF image-url("take_bible_icon_m.png@2x") no-repeat 93% 20px
-        background-size: 80px
-
     .bottom_cta div div
       background: image-url("bdc_mobile_icons@2x.png") no-repeat 0 0
       background-size: 260px 40px
+
+      @media screen and (max-width: 990px)
+
+        li.read_bible div
+          background: #FFF image-url("read_bible_icon_m@2x.png") no-repeat 93% 20px
+          background-size: 80px
+
+        li.study_bible div
+          background: #FFF image-url("highlight_bible_icon_m@2x.png") no-repeat 93% 20px
+          background-size: 80px
+
+        li.subscribe_bible div
+          background: #FFF image-url("subscribe_bible_icon_m@2x.png") no-repeat 93% 20px
+          background-size: 80px
+
+        li.take_bible div
+          background: #FFF image-url("take_bible_icon_m.png@2x") no-repeat 93% 20px
+          background-size: 80px
+
