YV-833 YV-905 head language tag fix, fix language link to path correctly for SEO

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -37,7 +37,7 @@
             %p#counter &nbsp;
             %p= t(".world installs")
         %div.mobile_platforms
-          = link_to(t(".download action"), 'http://bible.com/app')
+          = link_to(t(".download action"), app_page_path)
 
     .explore_cta
       %h2= t(".get started")
