--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
 
 %html{class: (@html_classes.join(' ') if @html_classes), "data-locale" => I18n.locale, id: @html_id, "data-logged-in" => logged_in?.to_s, "data-user-id" => logged_in? ? current_auth.user_id : nil, "data-user-name" => logged_in? ? current_auth.username : nil, "data-user-avatar" => logged_in? ? current_user.user_avatar_url["px_48x48"] : nil}
 
-  %head{lang: 'en-us'}
+  %head{lang: I18n.locale}
     = csrf_meta_tags
     = render '/shared/head'
     = render '/shared/javascripts'
@@ -25,7 +25,7 @@
 
       #container{class: container_class_str}
         #main{role: "main", class: @is_reader == true ? 'main_reader' : ''}
-          
+
           = render(partial: "layouts/primary_nav") unless @main_nav == false
           = content_for?(:main) ? yield(:main) : yield
 
