--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -47,21 +47,21 @@ input[type="submit"].action_button_grey,
   width: 100%
 
 input[type="submit"]
-  background-color: #81a950
+  background-color: #48A900
   +background-image(none)
   width: 100%
   padding: 10px 0
   color: #fff
   text-shadow: rgba(0,0,0,0.3) 0 -1px 0
   font-size: 15px
-  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0, inset rgba(255, 255, 255,0.2) 0 3px 0 !important)
+  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0 !important)
   border: none
 
 input[type="submit"]:hover
-  background-color: #81a950
+  background-color: #48A900
   +background-image(none)
   color: #fff
   text-shadow: rgba(0,0,0,0.3) 0 -1px 0
-  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0, inset rgba(255, 255, 255,0.2) 0 3px 0 !important)
+  +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0 !important)
   border: none
 
