--- a/app/assets/stylesheets/_header.sass
+++ b/app/assets/stylesheets/_header.sass
@@ -264,9 +264,7 @@
   line-height: 1
   position: relative
   z-index: 1
-  -moz-box-shadow: 0px 0px 8px #222
-  -webkit-box-shadow: 0px 0px 8px #222
-  box-shadow: 0px 0px 8px #222
+  +box-shadow(0px 0px 8px #222)
 
   ol
     width: 280px
@@ -298,3 +296,4 @@
   display: block
   text-align: center
   padding: 8px
+  font-weight: bold
